Attempts to fix the build (not working)