@@ -314,6 +314,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${compiler-plugin.version}</version>
                 <configuration>
                     <parameters>true</parameters>
                     <compilerArgs>
@@ -388,6 +389,8 @@
                 <quarkus.package.jar.enabled>false</quarkus.package.jar.enabled>
                 <skipITs>false</skipITs>
                 <quarkus.native.enabled>true</quarkus.native.enabled>
+                <!-- Fix for HostServices proxying issue in native image -->
+                <quarkus.native.additional-build-args>--initialize-at-run-time=io.quarkus.runner.ApplicationImpl,--initialize-at-run-time=org.hid4java.jna.LibusbHidApiLibrary,--initialize-at-run-time=org.hid4java.jna.HidApi,--initialize-at-run-time=org.hid4java.HidManager,--initialize-at-run-time=org.hid4java.HidServices,--initialize-at-run-time=org.hid4java,--initialize-at-run-time=com.sun.jna,--initialize-at-run-time=com.sun.glass.ui.Application,--initialize-at-run-time=com.sun.glass.ui.win.WinApplication,--initialize-at-run-time=com.sun.javafx.tk.quantum.QuantumToolkit,-J--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED,-J--add-exports=javafx.controls/com.sun.javafx.scene.control.skin.resources=ALL-UNNAMED,-H:NativeLinkerOption=shlwapi.lib</quarkus.native.additional-build-args>
             </properties>
         </profile>
         <profile>
